--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,34 @@
 FROM jenkins
 
+USER root
+
+########################
+# Docker
+########################
+RUN apt-get update \
+	&& apt-get -y install \
+	apt-transport-https \
+	ca-certificates \
+	curl \
+	software-properties-common
+
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+   xenial \
+   stable"
+
+RUN apt-get update \
+	&& apt-get -y install docker-ce
+
+
+########################
+# Docker Compose
+########################
+RUN curl -L https://github.com/docker/compose/releases/download/1.21.2/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose \
+	&& chmod +x /usr/local/bin/docker-compose
+
 
 ########################
 # Plugins Jenkins
