--- a/docker/Jenkins/Dockerfile
+++ b/docker/Jenkins/Dockerfile
@@ -1,4 +1,4 @@
-FROM jenkins
+FROM jenkins/jenkins:lts
 
 USER root
 
@@ -29,6 +29,8 @@ RUN apt-get update \
 RUN curl -L https://github.com/docker/compose/releases/download/1.21.2/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose \
 	&& chmod +x /usr/local/bin/docker-compose
 
+
+RUN usermod -aG docker jenkins
 
 ########################
 # Plugins Jenkins
